--- a/client/src/TaskPopup.css
+++ b/client/src/TaskPopup.css
@@ -5,23 +5,34 @@ left:0;
 top:0;
 right:0;
 bottom:0;
-background:rgba(0,0,0,0.5);
+background:rgba(0,0,0,0.75);
 display:block;
+overflow-y:scroll;
     }
 .TaskPopup-item{
     display:block;
     position:absolute;
+    overflow-y:visible;
+    overflow-x:visible;
     margin:0 auto;
-    top:30%;
-    left:30%;
-    right:30%;
-    background:rgba(225,255,240,0.8);
-    border:4px solid rgba(200,150,100,1.0);
-    box-shadow:0 5px 30px 1px rgba(0,0,0,0.5);
-    border-radius:5px;
-    padding:50px;
+    left:0;
+    right:0;
+    width:800px !important;
+    padding:0px;
+
+    top:10%;
+    bottom:10%;
    font-size:1.2em;
    line-height:150%;
    font-family:Schoolbell;
+
+}
+.TaskPopup-item .Page{
+    margin:0 auto;padding:0;
+    border-radius:0;
+    background:transparent;
+    box-shadow:none;
+    border:0px;
+    width:800px;
 
 }
