--- a/client/src/Caption.css
+++ b/client/src/Caption.css
@@ -1,8 +1,10 @@
 
 .Caption{
     border-radius:3px;
-    border:4px solid rgba(200,150,100,1.0);
-    background:#ff9;
+    font-weight:900;
+    color:#ed3093;
+    border:4px solid #ed3093;
+    background:#fff;
     display:table;
     position:relative;
     overflow:show;
@@ -16,5 +18,10 @@
     padding:2px 10px;
     clear:both;
 
-   box-shadow:5px 5px 10px 0px rgba(192,192,32,0.5);
+   box-shadow:5px 5px 10px 0px rgba(108,190,84,0.5);
+}
+.Strength-2{
+    font-weight:500;
+    font-size:2.0em;
+    line-height:1em;
 }
