--- a/client/src/SpeechBubble.css
+++ b/client/src/SpeechBubble.css
@@ -20,19 +20,21 @@
     display:inline;
 }
 .SpeechBubble-inner{
+    color:#ed3093;
+    border:4px solid #ed3093;
+    background:#fff;
     border-radius:150px;
-    background:white;
     display:inline-block;
     max-width:250px;
-    border:4px solid rgba(200,150,100,1.0);
-    min-height:2em;
+    border:4px solid #ed3093;
+    min-height:1em;
     white-space:normal;
     font-family:"Schoolbell";
     font-size:1.3em;
+    line-height:2em;
     text-align:center;
     padding:0 30px;
-   box-shadow:0px 0px 50px 2px rgba(192,128,32,0.5);
- background:rgba(225,255,240,1.0);
+   box-shadow:0px 0px 20px 2px rgba(108,190,84,0.5);
 }
 .SpeechBubble-right .SpeechBubble-inner{
    transform:rotate(5deg);
@@ -51,7 +53,7 @@
     border-left:60px solid #000;
     border-bottom:13px solid transparent;
     border-top:13px solid transparent;
-    border-left:26px solid rgba(200,150,100,1.0);
+    border-left:26px solid #ed3093;
 }
 /* creates part of the curve */
 .SpeechBubble-right .SpeechBubble-inner:after {
@@ -64,7 +66,7 @@
     border-left:60px solid #000;
     border-bottom:13px solid transparent;
     border-top:13px solid transparent;
-    border-left:26px solid rgba(225,255,240,1.0);
+    border-left:26px solid #fff;
 }
 /* creates part of the curve */
 .SpeechBubble-left .SpeechBubble-inner:before {
@@ -77,7 +79,7 @@
     border-right:60px solid #000;
     border-bottom:13px solid transparent;
     border-top:13px solid transparent;
-    border-right:26px solid rgba(200,150,100,1.0);
+    border-right:26px solid #ed3093;
 }
 /* creates part of the curve */
 .SpeechBubble-left .SpeechBubble-inner:after {
@@ -90,5 +92,5 @@
     border-right:60px solid #000;
     border-bottom:13px solid transparent;
     border-top:13px solid transparent;
-    border-right:26px solid rgba(225,255,240,1.0);
+    border-right:26px solid #fff;
 }
