--- a/client/src/Toolbox.css
+++ b/client/src/Toolbox.css
@@ -1,7 +1,9 @@
 
 .Toolbox{
 
- border-bottom:4px solid black;
- margin:10px;
- padding:10px 0;
+ border-bottom:2px solid #333;
+}
+.Taskbox{
+
+ border-bottom:2px solid #333;
 }
