--- a/client/src/Panel.css
+++ b/client/src/Panel.css
@@ -59,7 +59,7 @@
     background:rgba(192,128,32,0.0);
     box-shadow:0 0 0 0;
 }
-.PanelInput{
+.PanelInput, .PanelEditor, .PanelSelect{
     font-size:1.5em;
     width:28.5em;
     margin:1em;
