--- a/client/src/Loader.css
+++ b/client/src/Loader.css
@@ -1,10 +1,14 @@
 .Loader{
 
     position:fixed;
-    z-index:10000;
+    z-index:100;
     top:0;left:0;bottom:0;right:0;
-    overflow-y:scroll;
-    overflow-x:show;
-    background-size:cover;
-    background-color:red;
+    background-image:url("/img/Interwind.svg");
+    background-size:25%;
+    background-repeat:no-repeat;
+    background-position:center;
+    
+    background-color:rgba(0,0,0,0.75);
+
+    
 }
