--- a/client/src/Panel.css
+++ b/client/src/Panel.css
@@ -40,6 +40,17 @@
     font-size:1.5em;
     font-family:"Schoolbell";
 }
+.PanelCheckbox{
+    width:5em;
+    height:2em;
+font-size:1.5em;
+    margin:1em;
+    padding:0.5em 1em;
+    font-family:"Schoolbell";
+    background:rgba(200,250,200,0.5);
+    border:1px solid #aaa;
+
+}
 .PanelText{
    font-size:1.2em;
    line-height:150%;
