--- a/client/src/ShortProfile.css
+++ b/client/src/ShortProfile.css
@@ -1,10 +1,14 @@
 
 .ShortProfile {
-    padding:0 20px;
+    padding:0 20px 0 20px;
  border-bottom:2px solid #333;
 } 
 .ShortProfile img {
  margin:0 auto;
  padding:10px;
  display:block;
+}
+.ShortProfile p {
+    padding:5px 0;
+    margin:0;
 }
