--- a/client/src/Tier.css
+++ b/client/src/Tier.css
@@ -3,7 +3,8 @@
     white-space:nowrap;
     text-align:center;
     margin:0 auto;
-    width:800px;
+    max-width:1000px;
+    width:85%;
     padding:0;
     position:relative;
     overflow:show;
