--- a/client/src/Caption.css
+++ b/client/src/Caption.css
@@ -7,6 +7,7 @@
     background:#fff;
     display:table;
     position:relative;
+    z-index:2;
     overflow:show;
     white-space:normal;
     left:-20px;
@@ -24,4 +25,9 @@
     font-weight:500;
     font-size:2.0em;
     line-height:1em;
+}
+
+.Caption + .Image {
+   top:-3em !important;
+   margin-bottom:-3em !important;
 }
