--- a/client/src/Panel.css
+++ b/client/src/Panel.css
@@ -95,3 +95,12 @@ font-size:1.5em;
     border-color:#ddd;
     border-style:dotted;
 }
+.Panel .Image {
+    width:100%;
+    height:auto;
+    margin:0;
+    padding:0;
+    top:0;bottom:0;left:0;right:0;
+    position:relative;
+    float:left;
+}
