--- a/client/src/Drawer.css
+++ b/client/src/Drawer.css
@@ -13,12 +13,19 @@
         display:table-cell;
         width:220px;
         border-right:4px solid rgba(50,50,50,0.9);
+    width:225px;
         text-align:left;
+    }
+    .Drawer:after{
+
+    width:235px !important;
     }
     .Drawer .Tool input, .Pages a {
            text-align:left !important;
            padding-left:20px !important;
            margin:5px 0 !important;
+    }
+    .Drawer .Tool input{
            margin-right:-15px !important;
     }
     
@@ -48,9 +55,9 @@
     top:0;
     left:0;
     bottom:0;
-    right:0;
     width:inherit;
 }
+
 
 .Tool {
  white-space:nowrap;
@@ -98,7 +105,7 @@
  font-size:18px;
  color:black;
 }
-.Drawer .Tool *, .Drawer .Pages .StoredPage *{
+.Drawer .Tool *, .Drawer .Pages *{
  display:block !important;
  width:100%;
 }
