--- a/client/src/InfoPopup.css
+++ b/client/src/InfoPopup.css
@@ -4,7 +4,10 @@
  bottom:30px;
  left:0;
  right:0;
+ z-index:1000;
+    pointer-events:none;
 }
+
 .InfoPopup-inner{
  border-radius:400px;
  margin: 0 0;
@@ -12,4 +15,10 @@
  height:100px;
  white-space:nowrap;
     position:relative;
+}
+.InfoPopup .SpeechBubble {
+    width:50%;
+}
+.InfoPopup .SpeechBubble-inner {
+    max-width:100%;
 }
