--- a/client/src/Panel.css
+++ b/client/src/Panel.css
@@ -4,10 +4,9 @@
 }
 .Panel{
     vertical-align:top;
-   display:inline-block; 
+   display:table-cell; 
    position:relative;
    border:4px solid rgba(80,80,80,1.0);
-   margin:5px;
    white-space:normal;
    border-radius:3px;
    text-align:left;
@@ -15,6 +14,11 @@
    box-shadow:0px 0px 50px 2px rgba(255,255,255,0.5);
    color:#333;
     position:relative;
+}
+@media (orientation:portrait) {
+    .Panel{
+        display:block;
+    }
 }
 .Panel:after{
 
