--- a/client/src/Panel.css
+++ b/client/src/Panel.css
@@ -106,6 +106,7 @@ font-size:1.5em;
     width:100%;
     height:auto;
     margin:0;
+    margin-top:1.25em;
     padding:0;
     top:0;bottom:0;left:0;right:0;
     position:relative;
