--- a/client/src/Caption.css
+++ b/client/src/Caption.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Rock+Salt');
 
 .Caption{
     border-radius:3px;
@@ -5,22 +6,31 @@
     color:#ed3093;
     border:4px solid #ed3093;
     background:#fff;
-    display:inline;
+    display:inline-block;
     position:relative;
     z-index:2;
     overflow:show;
-    white-space:normal;
+    white-space:nowrap;
     left:-20px;
     top:12px;
     margin:5px;
     max-width:75%;
-    margin-bottom:10px;
-    font-family:'Schoolbell';
+    
+    
+    margin-bottom:0;
+    
+    font-family:"Rock Salt";
     font-size:1.2em;
-    padding:2px 10px;
+    padding:2px 7px;
     clear:both;
 
-   box-shadow:5px 5px 10px 0px rgba(108,190,84,0.5);
+    box-shadow:5px 5px 10px 0px rgba(108,190,84,0.5);
+    text-shadow:2px 5px rgba(255,10,10,0.25);
+}
+.Caption::first-letter{
+    color:#ed3093;
+    font-size:3em;
+    line-height:0em;
 }
 .Strength-2{
     font-weight:500;
@@ -29,6 +39,6 @@
 }
 
 .Caption + .Image {
-   top:-3em !important;
-   margin-bottom:-3em !important;
+    top:-5.25em !important;
+    margin-bottom:-5.25em !important;
 }
