Switch to OpenDyslexic font

--- a/client/src/Achievement.css
+++ b/client/src/Achievement.css
@@ -37,6 +37,6 @@
  padding-top:4px;
  display:block;
  text-align:center;
- font-family:"Schoolbell";
+ font-family:"OpenDyslexic";
  font-size:2em;
 }
