--- a/client/src/SpeechBubble.css
+++ b/client/src/SpeechBubble.css
@@ -29,7 +29,7 @@
     border:4px solid #ed3093;
     min-height:1em;
     white-space:normal;
-    font-family:"Schoolbell";
+    font-family:"OpenDyslexic";
     font-size:1.3em;
     line-height:2em;
     text-align:center;
