--- a/client/src/TaskPopup.css
+++ b/client/src/TaskPopup.css
@@ -43,7 +43,7 @@
 
 
 .TaskPopup-item .Page{
-    margin:0 auto;padding:1em;
+    margin:0 auto;
     border-radius:0;
     background:transparent;
     box-shadow:none;
