--- a/client/src/Panel.css
+++ b/client/src/Panel.css
@@ -90,8 +90,16 @@
     width:90%;
 }
 .Panel .Surface{
-    width:95% !important;
+    width:100% !important;
     margin:0;padding:0;
+}
+.Panel .Page{
+    width:100%;
+    margin:0;
+    padding:0;
+    background:none ;
+    box-shadow:none ;
+    border:0;
 }
 .Panel .Tier{
     width:100%;
@@ -106,7 +114,7 @@
     width:100%;
     height:auto;
     margin:0;
-    margin-top:1.25em;
+    margin-top:1.85em;
     padding:0;
     top:0;bottom:0;left:0;right:0;
     position:relative;
