--- a/client/src/Caption.css
+++ b/client/src/Caption.css
@@ -26,6 +26,18 @@
 
     box-shadow:5px 5px 10px 0px rgba(108,190,84,0.5);
 }
+.Caption:only-child {
+    width:100%;
+    position:normal;
+    display:block;
+    background:none;
+    border:none;
+    box-shadow:none;
+    font-size:2.5em;
+}
+.Caption:only-child::first-letter{
+    text-shadow:3px 3px #555;
+}
 .Caption::first-letter{
     color:#ed3093;
     font-size:3em;
