--- a/client/src/Page.css
+++ b/client/src/Page.css
@@ -2,12 +2,12 @@
 .Page{
     margin:0px auto;
     padding:10px 0;
-    background:rgba(225,255,240,0.75);
-    border-top:4px solid rgba(50,50,50,0.9);
-    border-left:0;
-    border-right:0;
-    box-shadow:0 5px 30px 1px rgba(0,0,0,0.5);
-    border-radius:5px;
+    -background:rgba(225,255,240,0.75);
+    -border-top:4px solid rgba(50,50,50,0.9);
+    -border-left:0;
+    -border-right:0;
+    -box-shadow:0 5px 30px 1px rgba(0,0,0,0.5);
+    -border-radius:5px;
     
 }
 
@@ -15,7 +15,7 @@
     border-top:0;
 }
 .Page:last-child{
-    border-bottom:4px solid rgba(50,50,50,0.9);
+    -border-bottom:4px solid rgba(50,50,50,0.9);
 }
 .Panel .Page:last-child{
     border:0;
