--- a/client/src/Panel.css
+++ b/client/src/Panel.css
@@ -8,14 +8,15 @@
     vertical-align:top;
    display:table-cell; 
    position:relative;
-   border:4px solid rgba(80,80,80,1.0);
+   border:2px solid rgba(80,80,80,1.0);
    white-space:normal;
    border-radius:3px;
    text-align:left;
    background:rgba(250,250,250,1.0);
    box-shadow:0px 0px 50px 2px rgba(255,255,255,0.5);
    color:#333;
-    position:relative;
+   position:relative;
+   border-radius:5px;
 }
 @media (orientation:portrait) {
     .Panel{
