--- a/client/src/Panel.css
+++ b/client/src/Panel.css
@@ -5,18 +5,23 @@
  height:inherit;
 }
 .Panel{
-    vertical-align:top;
+   vertical-align:top;
    display:table-cell; 
+   border-collapse:separate;
+   margin:10px;
    position:relative;
-   border:2px solid rgba(80,80,80,1.0);
    white-space:normal;
-   border-radius:3px;
+   border-radius:10px;
    text-align:left;
-   background:rgba(250,250,250,1.0);
    box-shadow:0px 0px 50px 2px rgba(255,255,255,0.5);
+
+   border-width:1px;
+   border-style:solid;
+   border-image:
+      linear-gradient(to bottom, rgba(0,0,0,0) 25%,#fda 50%, rgba(0, 0, 0, 0) 75%) 1 100%;
+
+
    color:#333;
-   position:relative;
-   border-radius:5px;
 }
 @media (orientation:portrait) {
     .Panel{
@@ -36,23 +41,25 @@
     cursor:pointer;
     background:none;
     border:2px solid #aaa;
-   box-shadow:0px 0px 100px 2px rgba(150,255,200,0.5);
+   box-shadow:0px 0px 100px 2px rgba(255,155,100,0.5);
+   
+   padding:0.5em;
+
 
 
    color:#777;
     text-align:center;
     display:block;
-    height:2em;
     width:100%;
     font-size:1.5em;
     font-family:"OpenDyslexic";
 }
 .PanelCheckbox{
-    width:5em;
+    width:2em;
     height:2em;
     font-size:1.5em;
-    margin:1.5em 0.25em;
-    padding:0.5em 1em;
+    margin:1.0em 0.5em;
+    padding:0.5em 0.5em;
     display:block;
     font-family:"OpenDyslexic";
     background:rgba(200,250,200,0.5);
@@ -79,16 +86,12 @@
 .PanelInput, .PanelEditor, .PanelSelect{
     font-size:1.5em;
     width:90%;
-    margin:1em;
-    margin:1.5em 1em;
-    padding:0.5em 1em;
+    margin:0 1.0em 0.5em 0.5em;
+    padding:0.2em 0.2em;
     padding-right:0;
     font-family:"OpenDyslexic";
     background:rgba(200,250,200,0.5);
     border:1px solid #aaa;
-}
-.PanelSelect {
-    width:90%;
 }
 .Panel .Surface{
     width:100% !important;
