--- a/client/src/Tier.css
+++ b/client/src/Tier.css
@@ -9,7 +9,9 @@
     position:relative;
     overflow:show;
     display:table;
-    border-spacing:2px;
+    border-top:1px solid #faa;
+    background:rgba(250,250,250,1.0);
+    border-spacing:0px;
     border-collapse:separate;
 }
 @media (orientation:portrait) {
