--- a/client/src/Panel.css
+++ b/client/src/Panel.css
@@ -72,8 +72,12 @@
    padding:0.1em 1.0em;
 }
 .PanelText:after{
-   content:"";
-   display:block;
+   #content:"";
+   #display:block;
+}
+p.PanelText{
+    margin-top:0.55em;
+    margin-bottom:0.0em;
 }
 .Panel-borderless{
     border:0;
