--- a/client/src/ShortProfile.css
+++ b/client/src/ShortProfile.css
@@ -1,7 +1,7 @@
 
 .ShortProfile {
     padding:0 20px 0 20px;
- border-bottom:2px solid #333;
+ border-bottom:1px solid #ed3093;
 } 
 .ShortProfile img {
  margin:0 auto;
