--- a/client/src/Panel.css
+++ b/client/src/Panel.css
@@ -18,7 +18,7 @@
    border-width:1px;
    border-style:solid;
    border-image:
-      linear-gradient(to bottom, rgba(0,0,0,0) 25%,#fda 50%, rgba(0, 0, 0, 0) 75%) 1 100%;
+      linear-gradient(to bottom, rgba(0,0,0,0) 25%,#fe7 50%, rgba(0, 0, 0, 0) 75%) 1 100%;
 
 
    color:#333;
@@ -44,13 +44,14 @@
    box-shadow:0px 0px 100px 2px rgba(255,155,100,0.5);
    
    padding:0.5em;
+   margin:0.5em auto;
 
 
 
    color:#777;
     text-align:center;
     display:block;
-    width:100%;
+    width:90%;
     font-size:1.5em;
     font-family:"OpenDyslexic";
 }
