--- a/client/src/Workspace.css
+++ b/client/src/Workspace.css
@@ -35,6 +35,7 @@
 }
 .Workspace-head {
     margin:0px auto; 
+    margin-bottom:2em;
     width:95%;
     max-width:1000px;
     text-align:center;
