--- a/client/src/Panel.css
+++ b/client/src/Panel.css
@@ -11,14 +11,12 @@
    margin:10px;
    position:relative;
    white-space:normal;
-   border-radius:10px;
    text-align:left;
-   box-shadow:0px 0px 50px 2px rgba(255,255,255,0.5);
 
    border-width:1px;
    border-style:solid;
    border-image:
-      linear-gradient(to bottom, rgba(0,0,0,0) 25%,#fe7 50%, rgba(0, 0, 0, 0) 75%) 1 100%;
+      linear-gradient(to bottom, rgba(0,0,0,0) 25%,#fbe 50%, rgba(0, 0, 0, 0) 75%) 1 100%;
 
 
    color:#333;
@@ -30,18 +28,18 @@
 }
 .Panel:after{
 
-    content:"";
-    pointer-events:none;
-    position:absolute;
-    top:0;left:0;right:0;bottom:0;
-   background:rgba(200,200,200,0.95) url("/img/stripes.png") 0/200px;
-   opacity:0.0125;
+   # content:"";
+   # pointer-events:none;
+   # position:absolute;
+   # top:0;left:0;right:0;bottom:0;
+   #background:rgba(200,200,200,0.95) url("/img/stripes.png") 0/200px;
+   #opacity:0.0125;
 }
 .PanelButton{
     cursor:pointer;
-    background:none;
+    background:#8fa;
     border:2px solid #aaa;
-   box-shadow:0px 0px 100px 2px rgba(255,155,100,0.5);
+   #box-shadow:0px 0px 100px 2px rgba(255,155,100,0.5);
    
    padding:0.5em;
    margin:0.5em auto;
