--- a/client/src/Drawer.css
+++ b/client/src/Drawer.css
@@ -35,28 +35,14 @@
 }
 
 .Drawer{
-    box-shadow: 10px 0 40px 0 rgba(0,0,0,0.5);
-    
+    #box-shadow: 3px 0 5px 0 rgba(0,0,0,0.5);
     background:rgba(250,250,250,0.75);
-    z-index:10000;
+    z-index:100;
     //background:#6cbe45;
     vertical-align:top;
     min-height:100%;
     margin:0;padding:0;
-    
 }
-.Drawer:after {
-    pointer-events:none;
-    content:"";
-    background:rgba(200,200,200,0.95) url("/img/stripes.png") 0/100px;
-    position:fixed;
-    opacity:0.125;
-    top:0;
-    left:0;
-    bottom:0;
-    width:inherit;
-}
-
 
 .Tool {
  white-space:nowrap;
