--- a/client/src/Tier.css
+++ b/client/src/Tier.css
@@ -1,17 +1,17 @@
 
 .Tier{
     white-space:nowrap;
-    text-align:center;
     margin:0 auto;
     width:75%;
-    padding:0;
+    padding:10px 0;
     position:relative;
     overflow:show;
     display:table;
     border-top:1px solid #faa;
-    background:rgba(250,250,250,1.0);
+    background:#f7f7f7;
     border-spacing:0px;
     border-collapse:separate;
+    box-shadow:0px 0px 10px 2px #fff;
 }
 @media (orientation:portrait) {
     .Tier{
